[project]
name = "tensorflow-caney"
dynamic = ["version", "description"]

[build-system]
requires = [
    "setuptools >= 40.6.0",
    "setuptools_scm[toml] >= 4, <6",
    "setuptools_scm_git_archive",
    "setuptools-git-versioning",
    "poetry",
    "wheel",
    "omegaconf",
    "segmentation-models",
    "xarray",
    "rioxarray",
    "numba"
]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
branch = true
relative_files = true
source = ['tensorflow_caney']
omit = ['tensorflow_caney/version.py']

[tool.coverage.report]
show_missing = true
fail_under = 95

[tool.black]
line-length = 88
target-version = ['py38']