[metadata]
name = tensorflow-caney
version = attr: tensorflow_caney.__version__
description = Methods for tensorflow deep learning applications
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nasa-cisto-ai/tensorflow-caney
author = jordancaraballo
author_email = jordan.a.caraballo-vega@nasa.gov
license = MIT
license_file = LICENSE.md
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
project_urls =
    Documentation = https://github.com/nasa-cisto-ai/tensorflow-caney
    Source =https://github.com/nasa-cisto-ai/tensorflow-caney
    Issues = https://github.com/nasa-cisto-ai/tensorflow-caney/issues

[options]
packages =
    tensorflow-caney
platforms = any
python_requires = >= 3.5
install_requires =
    numpy
    tqdm
    tensorflow

[options.extras_require]
test =
    pytest
    coverage[toml]
    black
docs =
    pdoc==8.0.1
all =
    %(docs)s
    %(test)s