[metadata]
name = tensorflow-caney
version = attr: tensorflow_caney.__version__
description = Methods for tensorflow deep learning applications
long_description = file: README.md
long_description_content_type = text/markdown
keywords = tensorflow-caney, deep-learning, machine-learning
url = https://github.com/nasa-nccs-hpda/tensorflow-caney
author = jordancaraballo
author_email = jordan.a.caraballo-vega@nasa.gov
license = MIT
license_file = LICENSE.md
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
project_urls =
    Documentation = https://github.com/nasa-nccs-hpda/tensorflow-caney
    Source = https://github.com/nasa-nccs-hpda/tensorflow-caney
    Issues = https://github.com/nasa-nccs-hpda/tensorflow-caney/issues

[options]
packages = find:
zip_safe = True
include_package_data = True
platforms = any
python_requires = >= 3.7
install_requires =
    omegaconf
    numpy
    pandas
    tqdm
    tensorflow
    segmentation-models
    xarray
    rioxarray
    numba
    keras-unet-collection
    scikit-learn

[options.entry_points]
console_scripts =
    cnn_segmentation_cli = tensorflow_caney.view.cnn_segmentation_cli:main
    cnn_regression_cli = tensorflow_caney.view.cnn_regression_cli:main

[options.extras_require]
test =
    pytest
    coverage[toml]
    black
    tensorflow
docs =
    pdoc==8.0.1
    tensorflow
all =
    %(docs)s
    %(test)s
